# berlach-plugins

./: CMakeLists.txt  OSNonlinearClippers.h  Oversamp.h  README.md  wto_ctab.h
cpp/: APFChain.cpp  AmpTrackers.cpp  BLBufRd.cpp  BerlachFilters.cpp  BitManip4.cpp  CMakeLists.txt  GranularChorus.cpp  LowLatConv.cpp  PCMRead.cpp  PhasorLP.cpp  ReverbUGens.cpp  SplineHysterisis.cpp  WTO.cpp  WarpIIRLattice.cpp  tanhtab.h
